Fix layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,27 @@
 }
 
 @media  screen and (min-width: 768px) {
+  .inner-body {
+    padding-left: 80px;
+  }
+
+  .hr-about {
+    width: 60%;
+  }
 
   .about-hr{
-    width: 355px;
+    width: 372px;
+  }
+
+  .about-text {
+    width: 75%;
   }
 }
+
+@media  screen and (min-width: 1024px) {
+  .inner-body {
+    padding-left: 200px;
+  }
+}
+
 
